Ingress/jenkins-1-jenkins-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s-be-31320--91e2df359a4cb7d7":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s-fw-default-jenkins-1-jenkins-ui--91e2df359a4cb7d7
    ingress.kubernetes.io/https-forwarding-rule: k8s-fws-default-jenkins-1-jenkins-ui--91e2df359a4cb7d7
    ingress.kubernetes.io/https-target-proxy: k8s-tps-default-jenkins-1-jenkins-ui--91e2df359a4cb7d7
    ingress.kubernetes.io/ssl-cert: k8s-ssl-44068f33f0227eb6-d5338c5cee303bfa--91e2df359a4cb7d7
    ingress.kubernetes.io/static-ip: k8s-fw-default-jenkins-1-jenkins-ui--91e2df359a4cb7d7
    ingress.kubernetes.io/target-proxy: k8s-tp-default-jenkins-1-jenkins-ui--91e2df359a4cb7d7
    ingress.kubernetes.io/url-map: k8s-um-default-jenkins-1-jenkins-ui--91e2df359a4cb7d7
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"jenkins-master","app.kubernetes.io/name":"jenkins-1"},"name":"jenkins-1-jenkins-ui","namespace":"default","ownerReferences":[{"apiVersion":"app.k8s.io/v1beta1","blockOwnerDeletion":true,"kind":"Application","name":"jenkins-1","uid":"9f5f96a0-2c35-11ea-8c88-42010a8e0044"}]},"spec":{"backend":{"serviceName":"jenkins-1-jenkins-ui","servicePort":8080},"tls":[{"secretName":" [...]
  creationTimestamp: "2020-01-01T01:26:12Z"
  generation: 1
  labels:
    app.kubernetes.io/component: jenkins-master
    app.kubernetes.io/name: jenkins-1
  name: jenkins-1-jenkins-ui
  namespace: default
  ownerReferences:
  - apiVersion: app.k8s.io/v1beta1
    blockOwnerDeletion: true
    kind: Application
    name: jenkins-1
    uid: 9f5f96a0-2c35-11ea-8c88-42010a8e0044
  resourceVersion: "3294"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/jenkins-1-jenkins-ui
  uid: b29ad4e1-2c35-11ea-8c88-42010a8e0044
spec:
  backend:
    serviceName: jenkins-1-jenkins-ui
    servicePort: 8080
  tls:
  - secretName: jenkins-1-tls
status:
  loadBalancer:
    ingress:
    - ip: 130.211.33.44
